...
            searchEntryCallback(tag.name)
            selectedTag = tag.name
        }
    }

    // Main component of the discover mode
    Column(modifier = Modifier.fillMaxWidth().padding(5.dp).testTag("discover_main_component")) {
        // Display the parents of the current tag in order to go back in the hierarchy
        // when they are clicked
        TagHierarchyNavigableBar(
            tagParents,
            currentDepth,
            { tag -> onParentClicked(tag) },
...
        )
        Spacer(modifier = Modifier.height(5.dp))
        // Display the tags
        LazyVerticalGrid(
            columns = GridCells.Fixed(2),
            contentPadding = PaddingValues(16.dp),
            modifier = Modifier.testTag("discover_lazy_grid")
        ) {
            items(tags) { tag ->
                SearchMenuDiscoverItem(
                    tag,
                    { onTagClicked(tag) },
                    selectedTag,
...
