...
    Row(
        modifier = Modifier.fillMaxWidth().height(25.dp),
        verticalAlignment = Alignment.CenterVertically,
    ) {
        // if else here to not display the root name if we are at the root, but select category
        if (currentDepth == 0) {
            Text(rootName, modifier = Modifier.testTag("discover_select_category"))
        } else {
            // Format the display of the parents of the current tag. The last tag is not
            // clickable because it is the current tag, that's why we take ...size - 1
            tagParents.subList(0, tagParents.size - 1).forEachIndexed { id, tag ->
                Text(
                    text =
...
